@@ -7,6 +7,7 @@ import com.sanguiwara.badges.Target;
 import com.sanguiwara.baserecords.GamePlan;
 import com.sanguiwara.baserecords.InGamePlayer;
 import com.sanguiwara.baserecords.Player;
+import com.sanguiwara.calculator.PlayerScoreCalculator;
 import com.sanguiwara.gameevent.DriveEvent;
 import com.sanguiwara.result.DriveResult;
 import com.sanguiwara.type.ShotType;
@@ -18,7 +19,7 @@ import java.util.UUID;
 
 @RequiredArgsConstructor
 public class DriveSpecification implements ShotSpec<DriveEvent, DriveResult> {
-    private static final double ASSIST_BONUS_PCT = 0.15;
+    private static final double ASSIST_BONUS_PCT = 0.25;
 
     // Success Pct Constants
     private static final double FINITION_CERCLE_WEIGHT = 0.15;
@@ -30,24 +31,6 @@ public class DriveSpecification implements ShotSpec<DriveEvent, DriveResult> {
 
     // Attempts Sampling Constants
     // Intensity distribution is handled by ShotAttemptDistributor with shared constants across ShotSpec.
-
-    // Offensive Score Weights
-    private static final double OFF_SPEED_WEIGHT = 0.18;
-    private static final double OFF_SIZE_WEIGHT = 0.08;
-    private static final double OFF_ENDURANCE_WEIGHT = 0.05;
-    private static final double OFF_BALLHANDLING_WEIGHT = 0.20;
-    private static final double OFF_FINITION_WEIGHT = 0.35;
-    private static final double OFF_FLOATER_WEIGHT = 0.10;
-    private static final double OFF_IQ_WEIGHT = 0.04;
-
-    // Defensive Score Weights
-    private static final double DEF_SPEED_WEIGHT = 0.18;
-    private static final double DEF_SIZE_WEIGHT = 0.22;
-    private static final double DEF_EXTERIEUR_WEIGHT = 0.22;
-    private static final double DEF_ENDURANCE_WEIGHT = 0.10;
-    private static final double DEF_IQ_WEIGHT = 0.12;
-    private static final double DEF_STEAL_WEIGHT = 0.10;
-    private static final double DEF_POSTE_WEIGHT = 0.06;
     private final Random random;
     private final BadgeEngine badgeEngine;
 
@@ -87,24 +70,12 @@ public class DriveSpecification implements ShotSpec<DriveEvent, DriveResult> {
 
     @Override
     public double getDefensiveScoreForAShot(Player defender) {
-        double score = DEF_SPEED_WEIGHT * defender.getSpeed()
-                + DEF_SIZE_WEIGHT * defender.getSize()
-                + DEF_EXTERIEUR_WEIGHT * defender.getDefExterieur()
-                + DEF_ENDURANCE_WEIGHT * defender.getEndurance()
-                + DEF_IQ_WEIGHT * defender.getBasketballIqDef()
-                + DEF_STEAL_WEIGHT * defender.getSteal()
-                + DEF_POSTE_WEIGHT * defender.getDefPoste();
+        double score = PlayerScoreCalculator.calculateDriveDefenseScore(defender);
         return badgeEngine.apply(defender, BadgeType.DEF_EXTER, Target.DEFENSE_SCORE, score, ShotContext.empty());
     }
 
     public double getPlayerScoreForAShot(Player attacker) {
-        return OFF_SPEED_WEIGHT * attacker.getSpeed()
-                + OFF_SIZE_WEIGHT * attacker.getSize()
-                + OFF_ENDURANCE_WEIGHT * attacker.getEndurance()
-                + OFF_BALLHANDLING_WEIGHT * attacker.getBallhandling()
-                + OFF_FINITION_WEIGHT * attacker.getFinitionAuCercle()
-                + OFF_FLOATER_WEIGHT * attacker.getFloater()
-                + OFF_IQ_WEIGHT * attacker.getBasketballIqOff();
+        return PlayerScoreCalculator.calculateDriveScore(attacker);
     }
 
     @Override
@@ -147,7 +118,7 @@ public class DriveSpecification implements ShotSpec<DriveEvent, DriveResult> {
 
 
     private static double clamp(double v) {
-        return Math.max(DriveSpecification.MIN_SUCCESS_PCT, Math.min(DriveSpecification.MAX_SUCCESS_PCT, v));
+        return Math.clamp(v, DriveSpecification.MIN_SUCCESS_PCT, DriveSpecification.MAX_SUCCESS_PCT);
     }
 
 }
